src/FinancialForce Accounting/objects/InquiryTemplateColumn__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>CalculateFormulaOnSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>(Deprecated)Reapply Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ColumnWidth__c</fullName>
        <label>Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConditionFalseFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionFalseTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionToValue__c</fullName>
        <label>Condition To Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionTrueFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionTrueTextColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionValue__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equal to</fullName>
                </value>
                <value>
                    <fullName>Not Equal to</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Starts with</fullName>
                </value>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>More Than</fullName>
                </value>
                <value>
                    <fullName>Less Than Or Equal To</fullName>
                </value>
                <value>
                    <fullName>More Than Or Equal To</fullName>
                </value>
                <value>
                    <fullName>In Range</fullName>
                </value>
                <value>
                    <fullName>Not In Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>DataViewField__c</referenceTo>
        <relationshipLabel>Inquiry Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecimalPlaces__c</fullName>
        <label>Decimal Places</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DrillInquiryTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Drill Inquiry Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipLabel>Drill Inquiry Template Columns</relationshipLabel>
        <relationshipName>DrillInquiryTemplateColumns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormulaDp__c</fullName>
        <label>Formula Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula (deprecated - do not remove)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template Columns</relationshipLabel>
        <relationshipName>InquiryTemplateColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegativeFillColor__c</fullName>
        <label>Negative Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NegativeNumberFormat__c</fullName>
        <label>Negative Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parenthesis</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unsigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NegativeTextColor__c</fullName>
        <label>Negative Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositiveFillColor__c</fullName>
        <label>Positive Fill Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositiveTextColor__c</fullName>
        <label>Positive Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scaling__c</fullName>
        <label>Scaling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale to Nearest Thousand</fullName>
                </value>
                <value>
                    <fullName>Scale to Nearest Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowNumberSeparators__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Separators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Total This Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueType__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotNumber</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>zDeprecated:Inquiry Template Column</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>